<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:orientation="horizontal"
    android:id="@+id/hilfe"
    tools:context=".com.dhbw.studienarbeit.skiapp.Hilfe">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/hilfeÜberschrift"
        android:id="@+id/tvHilfeBeschreibung"
        android:layout_marginTop="25dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zurück"
        android:id="@+id/bZurueck"
        android:onClick="Zurück"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp" />


    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:id="@+id/scrollView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="75dp"
        android:layout_marginBottom="75dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="50dp">

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/hilfeText"
        android:id="@+id/tvGestureEvent"
        android:scrollbars="vertical"

        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp" />
    </ScrollView>

</RelativeLayout>